--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,4 @@ authors = ["Michele Bertasi <michele.bertasi+github@gmail.com>"]
 [dependencies]
 docopt = "0.6"
 rustc-serialize = "0.3"
+regex = "0.1"
